syntax = "proto3";

package protos;

option go_package= "testProj/testGRPC/protos";

service Greeter {
rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
string name = 1;
string lastname = 2;
}

message HelloResponse {
string message = 1;
}

service NewGeocode {
  rpc Geocode (GeoRequest) returns (GeoResponse){}
}

message GeoRequest {
  string lat = 1;
  string lon = 2;
}

message GeoResponse {
  string message =1;
}